# GOIT

./: .gitignore  homework.py
DATA SCIENCE/Week 1/: Hw1.ipynb  main.py  test.ipynb
DATA SCIENCE/Week 10/: HW_10.ipynb
DATA SCIENCE/Week 11/: HW_11.ipynb
DATA SCIENCE/Week 12/: HW_12.ipynb
DATA SCIENCE/Week 2/: working_material.ipynb
DATA SCIENCE/Week 3/: exmp.ipynb  gradient_descent_3dim copy.py  gradient_descent_3dim.py  gradient_descent_test.ipynb  test.py
DATA SCIENCE/Week 4/: OverfittingHomeWork.ipynb
WEB/WEEK2/jason-bot-docker/: Dockerfile  README.md  address_book.py  jason.py  note_book.py  notes.json  pyproject.toml  save.json
WEB/Week 10/Week 10 HW/: pyproject.toml
WEB/Week 10/Week 10 HW/quotes/: load_data.py
WEB/Week 10/Week 10 HW/quotes/authapp/: forms.py  urls.py  views.py
WEB/Week 10/Week 10 HW/quotes/authapp/templates/authapp/: login.html  signup.html
WEB/Week 10/Week 10 HW/quotes/quotes/: settings.py  urls.py
WEB/Week 10/Week 10 HW/quotes/quotesapp/: models.py  urls.py  views.py
WEB/Week 10/Week 10 HW/quotes/quotesapp/management/commands/: populate_database.py
WEB/Week 10/Week 10 HW/quotes/quotesapp/migrations/: 0004_alter_author_born_location_alter_author_description_and_more.py  0005_remove_quote_author_remove_quote_tags_delete_author_and_more.py  0006_initial.py  0008_initial.py  0009_remove_quote_author_remove_quote_tags_delete_author_and_more.py  0010_initial.py  0011_remove_quote_author_remove_quote_tags_delete_author_and_more.py  0014_initial.py
WEB/Week 10/Week 10 HW/quotes/quotesapp/templates/quotesapp/: add_quote.html  author.html  base.html  index.html
WEB/Week 11/Week 11 L1/: db.py  main.py  old.py  pyproject.toml
WEB/Week 12/Week 12 HW/: main.py  pyproject.toml
WEB/Week 12/Week 12 HW/migrations/: env.py
WEB/Week 12/Week 12 HW/migrations/versions/: 61ed350810bb_init.py  96039f60eedc_init.py  a5c6de50a884_init.py
WEB/Week 12/Week 12 HW/src/: schemas.py
WEB/Week 12/Week 12 HW/src/database/: models.py
WEB/Week 12/Week 12 HW/src/repository/: contacts.py  users.py
WEB/Week 12/Week 12 HW/src/routes/: auth.py
WEB/Week 12/Week 12 HW/src/schemas/: user.py
WEB/Week 12/Week 12 HW/src/services/: auth.py
WEB/Week 14/AWS Test/: .env  main.py  pyproject.toml  settings.py
WEB/Week 14/Week 14 FastAPI/: docker-compose.yml  pyproject.toml  test.db  test.py
WEB/Week 14/Week 14 FastAPI/docs/: conf.py
WEB/Week 14/Week 14 FastAPI/docs/_build/doctrees/: environment.pickle  index.doctree
WEB/Week 14/Week 14 FastAPI/docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
WEB/Week 14/Week 14 FastAPI/docs/_build/html/_sources/: index.rst.txt
WEB/Week 14/Week 14 FastAPI/migrations/versions/: 1b65df5e8597_init.py
WEB/Week 14/Week 14 FastAPI/postgres-data/base/1/: pg_internal.init
WEB/Week 14/Week 14 FastAPI/postgres-data/base/5/: 1247  1249  16393  16399  16402  16403  16410  16418  2224  2579  2604  2606  2608  2610  2620  2656  2658  2659  2664  2667  2678  2699  2701  3455  5002
WEB/Week 14/Week 14 FastAPI/postgres-data/global/: 1260  pg_control
WEB/Week 14/Week 14 FastAPI/postgres-data/pg_stat/: pgstat.stat
WEB/Week 14/Week 14 FastAPI/src/conf/: config.py
WEB/Week 14/Week 14 FastAPI/src/repository/: contacts.py  users.py
WEB/Week 14/Week 14 FastAPI/src/routes/: auth.py  contacts.py  users.py
WEB/Week 14/Week 14 FastAPI/src/schemas/: contact.py  user.py
WEB/Week 14/Week 14 FastAPI/src/services/: auth.py  email.py
WEB/Week 14/Week 14 FastAPI/tests/: conftest.py  test_route_contacts.py  test_route_users.py  test_unit_repository_contacts.py  test_unit_repository_users.py
WEB/Week 4/: main.py  (+3 more)
Week 10/: homework 10.py
Week 11/: homework 11.py
Week 12/: file_address_book.json  homework 12 v2.py  homework 12.py
Week 8/: homework_v2.py
Week 9/: homework 9.py
(+165 files in other folders)
