[tool.poetry]
name = "week 11 hw"
version = "0.1.0"
description = ""
authors = ["Bohdan Boiprav <122865615+bohdanboiprav@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.105.0"
uvicorn = { extras = ["standard"], version = "^0.25.0" }
alembic = "^1.13.1"
sqlalchemy = "^2.0.23"
asyncpg = "^0.29.0"
greenlet = "^3.0.3"
faker = "^21.0.0"
jose = "^1.0.0"
python-jose = { extras = ["cryptography"], version = "^3.3.0" }
passlib = { extras = ["bcrypt"], version = "^1.7.4" }
python-multipart = "^0.0.6"
libgravatar = "^1.0.4"
pydantic = { extras = ["email"], version = "^2.5.3" }
fastapi-mail = { extras = ["httpx"], version = "^1.4.1" }
python-dotenv = "^1.0.0"
cloudinary = "^1.37.0"
fastapi-limiter = "^0.1.5"
redis = "==4.*"
pytest = "^7.4.4"
pytest-asyncio = "^0.23.3"
aiosqlite = "^0.19.0"


[tool.poetry.group.dev.dependencies]
sphinx = "^7.2.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
addopts = "--doctest-modules"
testpaths = [
    "tests", ]
pythonpath = "."
filterwarnings = "ignore::DeprecationWarning"